fixed mobile navbar spacing

--- a/src/_base/base.css
+++ b/src/_base/base.css
@@ -80,7 +80,7 @@
 
 /* Navbar Mobile */
 .navbarmobile {
-  height: 50px;
+  height: 70px;
   width: 100vw;
 }
 
@@ -99,8 +99,9 @@
 .navbarmobile .header {
   background-color: #fff;
   position: fixed;
-  width: 100%;
-  z-index: 2;
+  width: 100vw;
+  /* width: 100%;
+  z-index: 2; */
 }
 
 .navbarmobile .header ul {
@@ -108,7 +109,7 @@
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
+  background-color: white;
   text-align: center;
 }
 
